k8s/7-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: purchase-service
spec:
  selector:
    matchLabels:
      app: purchase-service
  template:
    metadata:
      labels:
        app: purchase-service
    spec:
      containers:
        - name: purchase-service
          image: purchase-service:v1
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: user-service:v1
          ports:
            - containerPort: 8080
