k8s/0-kafka.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafkaserver
  labels:
    app: kafkaserver
spec:
  ports:
  - port: 9092
    name: plaintext
  - port: 9999
    name: jmx
  selector:
    app: kafkaserver
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper-service
  name: zookeeper-service
spec:
  type: NodePort
  ports:
    - name: zookeeper-port
      port: 2181
      targetPort: 2181
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zookeeper
  name: zookeeper
spec:
  selector:
    matchLabels:
      app: zookeeper
  replicas: 1
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - image: library/zookeeper:3.4.13
          imagePullPolicy: IfNotPresent
          name: zookeeper
          ports:
            - containerPort: 2181
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafkaserver
spec:
  selector:
    matchLabels:
      app: kafkaserver
  serviceName: "kafkaserver"
  replicas: 1
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: kafkaserver
    spec:
      containers:
      - name: kafkaserver
        image: wurstmeister/kafka:2.11-2.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9092
          name: plaintext
        - containerPort: 9999
          name: jmx
