k8s/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: insurance.dev.loc
    http:
      paths:
      - path: /users
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service
            port:
              number: 8080
      - path: /purchases
        pathType: ImplementationSpecific
        backend:
          service:
            name: purchase-service
            port:
              number: 8080
